--- a/src/scss/componets/header.scss
+++ b/src/scss/componets/header.scss
@@ -1,3 +1,112 @@
 .header {
+	padding: 36px 0;
+	border-bottom: 1px solid #E5E5E5;
 
+	&__body {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+
+	}
+
+	&__logo {
+		margin-right: 20px;
+
+		img {
+			max-width: 100%;
+			height: auto;
+		}
+	}
+
+	&__button {
+		border: 1px solid #E30613;
+		box-sizing: border-box;
+		border-radius: 4px;
+		position: relative;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		flex-shrink: 0;
+		width: 29px;
+		height: 29px;
+		padding: 5px;
+		background-color: #fff;
+		display: none;
+
+		&:before {
+			content: '';
+			position: absolute;
+			top: 7px;
+			left: 0;
+			right: 0;
+			margin: auto;
+			background-color: #E30613;
+			width: 17px;
+			height: 1px;
+		}
+
+		&:after {
+			content: '';
+			position: absolute;
+			bottom: 7px;
+			left: 0;
+			right: 0;
+			margin: auto;
+			background-color: #E30613;
+			width: 17px;
+			height: 1px;
+		}
+
+		span {
+			width: 100%;
+			height: 1px;
+			background-color: #E30613;
+		}
+	}
+
+	&__phone {
+		font-weight: bold;
+		font-size: 24px;
+		text-decoration: none;
+		letter-spacing: 0.05em;
+		text-transform: uppercase;
+		color: #000000;
+		flex-shrink: 0;
+		margin-right: 20px;
+	}
+
+	&__btn {
+		font-weight: bold;
+		font-size: 13px;
+		line-height: 16px;
+		padding: 8.5px 30px;
+	}
+
+	@include r(767) {
+		padding: 24px 0;
+		&__body {
+			flex-wrap: wrap;
+			gap: 15px;
+		}
+		&__logo {
+			flex: 0 1 70%;
+			margin-right: 0;
+		}
+		&__button {
+			display: flex;
+		}
+
+		&__phone {
+			flex: 0 1 46%;
+			margin-right: 0;
+			font-size: 18px;
+		}
+
+		&__btn {
+			flex: 0 1 100%;
+			max-width: 136px;
+			font-size: 12px;
+			padding: 8.5px 0;
+		}
+	}
 }
