--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -1,10 +1,17 @@
 @font-face {
-	font-family: 'Firenight';
-	src: url('../fonts/Firenight/MyriadPro-Regular.eot');
-	src: url('../fonts/Firenight/Firenight-regular.woff') format('woff'),
-	url('../fonts/Firenight/Firenight-regular.woff2') format('truetype');
+	font-family: 'AvantGardeCTT';
+	src: url('../fonts/AvantGardeCTT/AvantGardeCTT.ttf') format('truetype');
+	font-weight: 400;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'AvantGardeCTT';
+	src: url('../fonts/AvantGardeCTT/avantgardectt_bold.ttf') format('truetype');
+	font-weight: 700;
+	font-style: normal;
 }
 
 
 
-$font1: 'Firenight', sans-serif;
+$font1: 'AvantGardeCTT', sans-serif;
