--- a/src/scss/mpr-franchise.scss
+++ b/src/scss/mpr-franchise.scss
@@ -1,12 +1,14 @@
 @import "mixin";
+@import "fonts";
+@import "buttons";
+@import "remodal";
 
 * {
 	box-sizing: border-box;
 }
 
 body {
-
-	font-family: PT Sans;
+	font-family: $font1;
 	&.lock {
 		overflow: hidden;
 	}
@@ -15,13 +17,13 @@ body {
 	position: relative;
 	p {
 		font-size: 18px;
-		line-height: 26px;
-		color: #fff;
+		line-height: 25px;
+		color: #333;
 	}
 }
 
 .container {
-	max-width: 1366px;
+	max-width: 1156px;
 	margin-left: auto;
 	margin-right: auto;
 	padding-right: 15px;
@@ -62,6 +64,7 @@ body {
 }
 
 @import "componets/header";
+@import "componets/nav";
 
 
 
