--- a/src/scss/componets/nav.scss
+++ b/src/scss/componets/nav.scss
@@ -9,6 +9,7 @@
 		justify-content: space-between;
 	}
 	&__item{
+		position: relative;
 	}
 	&__link{
 		font-weight: normal;
@@ -18,8 +19,33 @@
 		text-transform: capitalize;
 		color: #000000;
 		text-decoration: none;
+		&:hover{
+			color: #E30613;
+		}
 	}
 	&__dropdown{
 		display: none;
+	}
+	@include r(767){
+		position: fixed;
+		top: 0;
+		left: 0;
+		transform: translate(-100%,0);
+		background-color: #fff;
+		width: 100%;
+		height: 100%;
+		z-index: 10;
+		transition: transform .3s ease;
+		&.active{
+			transform: translate(0,0);
+			transition: transform .3s ease;
+		}
+		&__menu{
+			margin: 0;
+			padding: 0;
+			list-style: none;
+			flex-direction: column;
+			align-items: flex-start;
+		}
 	}
 }
