--- a/src/scss/icon.scss
+++ b/src/scss/icon.scss
@@ -1,6 +1,29 @@
-.svg-icon {
+.icon {
     display: inline-block;
-    width: 1em;
-    height: 1em;
+    position: relative;
+    margin-right: 14px;
+    width: 24px;
+    height: 24px;
     vertical-align: middle;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100%;
 }
+
+.icon-arrow-dropdown { width: 27px; height: 14px; }
+.icon-bonus { width: 31px; height: 36px; }
+.icon-brend { width: 24px; height: 32px; }
+.icon-complaints { width: 32px; height: 41px; }
+.icon-computer { width: 38px; height: 31px; }
+.icon-cube { width: 39px; height: 42px; }
+.icon-delivery { width: 44px; height: 36px; }
+.icon-escort { width: 37px; height: 34px; }
+.icon-fb { width: 132px; height: 38px; }
+.icon-inst { width: 224px; height: 128px; }
+.icon-ok { width: 119px; height: 39px; }
+.icon-percent { width: 55px; height: 52px; }
+.icon-services { width: 36px; height: 33px; }
+.icon-training { width: 36px; height: 36px; }
+.icon-training-red { width: 36px; height: 36px; }
+.icon-umbrella { width: 38px; height: 39px; }
+.icon-vk { width: 117px; height: 39px; }
