--- a/src/scss/mpr-franchise.scss
+++ b/src/scss/mpr-franchise.scss
@@ -2,6 +2,7 @@
 @import "fonts";
 @import "buttons";
 @import "remodal";
+@import "form";
 
 * {
 	box-sizing: border-box;
@@ -71,6 +72,7 @@ a{
 
 @import "componets/header";
 @import "componets/nav";
+@import "componets/footer";
 
 
 
