--- a/src/scss/componets/hero.scss
+++ b/src/scss/componets/hero.scss
@@ -8,7 +8,8 @@
 		text-align: right;
 	}
 	&__title{
-		font-weight: bold;
+		font-family: 'CenturyGothic';
+		font-weight: 700;
 		font-size: 50px;
 		line-height: 60px;
 		letter-spacing: 0.05em;
