--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -7,7 +7,14 @@
 
 @font-face {
 	font-family: 'AvantGardeCTT';
-	src: url('../fonts/AvantGardeCTT/avantgardectt_bold.ttf') format('truetype');
+	src: url('../fonts/AvantGardeCTT/AvantGardeCTT-bold.ttf') format('truetype');
+	font-weight: 700;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'CenturyGothic';
+	src: url('../fonts/CenturyGothic/CenturyGothic-bold.ttf') format('truetype');
 	font-weight: 700;
 	font-style: normal;
 }
