--- a/src/scss/mpr-franchise.scss
+++ b/src/scss/mpr-franchise.scss
@@ -80,6 +80,8 @@ img{
 @import "componets/footer";
 @import "componets/percent";
 @import "componets/general-information";
+@import "componets/geografia";
+@import "componets/statistic";
 
 
 
