--- a/src/scss/mpr-franchise.scss
+++ b/src/scss/mpr-franchise.scss
@@ -82,6 +82,7 @@ img{
 @import "componets/general-information";
 @import "componets/geografia";
 @import "componets/statistic";
+@import "componets/advantage";
 
 
 
