--- a/src/scss/mpr-franchise.scss
+++ b/src/scss/mpr-franchise.scss
@@ -83,6 +83,7 @@ img{
 @import "componets/geografia";
 @import "componets/statistic";
 @import "componets/advantage";
+@import "componets/open-data";
 
 
 
