--- a/src/scss/componets/advantage.scss
+++ b/src/scss/componets/advantage.scss
@@ -1,6 +1,43 @@
 .advantage{
 	background-color: #E30613;
-	padding: 44px 0;
+	padding: 80px 0;
+	color: #fff;
+	&.stages{
+		background-color: #fff;
+		color: #000;
+		.advantage__title{
+			font-weight: bold;
+			font-size: 24px;
+			line-height: 25px;
+			letter-spacing: 0.05em;
+			position: relative;
+			&:after{
+				content: '';
+				position: absolute;
+				bottom: -15px;
+				left: 0;
+				width: 272px;
+				height: 3px;
+				background-color: #E30613;
+			}
+		}
+		.advantage__item{
+			padding-left: 100px;
+		}
+		.advantage__img{
+			width: auto;
+			height: auto;
+			border-bottom: 3px solid #E30613;
+			top: -24px;
+		}
+		.advantage__list{
+			li{
+				&:before{
+					background-color: #000;
+				}
+			}
+		}
+	}
 	&__header{
 		margin-bottom: 72px;
 	}
@@ -9,13 +46,43 @@
 		font-size: 24px;
 		line-height: 25px;
 		letter-spacing: 0.05em;
-		color: #FFFFFF;
+		position: relative;
+		&:after{
+			content: '';
+			position: absolute;
+			bottom: -15px;
+			left: 0;
+			width: 272px;
+			height: 3px;
+			background-color: #fff;
+		}
 	}
 	&__body{
-
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		grid-gap: 20px 50px;
+		justify-content: space-between;
 	}
 	&__item{
-
+		padding-left: 50px;
+		position: relative;
+		span{
+			color: #fff;
+		}
+	}
+	&__img{
+		position: absolute;
+		top: -10px;
+		left: 0;
+		width: 45px;
+		height: 45px;
+		font-weight: bold;
+		font-size: 48px;
+		img{
+			width: 100%;
+			height: 100%;
+			object-fit: contain;
+		}
 	}
 	&__name{
 		font-weight: bold;
@@ -23,11 +90,11 @@
 		line-height: 25px;
 		letter-spacing: 0.05em;
 		text-transform: capitalize;
-		color: #FFFFFF;
+		margin-bottom: 20px;
 	}
 	&__list{
 		margin: 0 0 70px;
-		padding: 0;
+		padding: 0 0 0 20px;
 		list-style: none;
 		li{
 			position: relative;
@@ -36,11 +103,12 @@
 			line-height: 25px;
 			letter-spacing: 0.05em;
 			text-transform: capitalize;
-			color: #fff;
+			padding-left: 15px;
 			&:before{
 				content: '';
-				display: inline-block;
-				color: #fff;
+				position: absolute;
+				top: 9px;
+				left: 0;
 				border-radius: 50%;
 				background-color: #fff;
 				width: 5px;
@@ -49,6 +117,85 @@
 				vertical-align: middle;
 				overflow: hidden;
 			}
+		}
+	}
+	.btn{
+		margin: 0 auto;
+		display: block;
+	}
+	@include r(767){
+		padding: 20px 0;
+		&.stages{
+			background-color: #fff;
+			color: #000;
+			.advantage__title{
+				font-weight: bold;
+				font-size: 24px;
+				line-height: 25px;
+				letter-spacing: 0.05em;
+				position: relative;
+				&:after{
+					content: '';
+					position: absolute;
+					bottom: -15px;
+					left: 0;
+					width: 272px;
+					height: 3px;
+					background-color: #E30613;
+				}
+			}
+			.advantage__item{
+				padding-left: 60px;
+			}
+			.advantage__img{
+				width: auto;
+				height: auto;
+				border-bottom: 3px solid #E30613;
+				top: -8px;
+				font-size: 30px;
+			}
+			.advantage__list{
+				li{
+					&:before{
+						background-color: #000;
+					}
+				}
+			}
+		}
+		&__header{
+			margin-bottom: 37px;
+		}
+		&__title{
+			font-size: 20px;
+			line-height: 25px;
+			&:after{
+				content: '';
+				position: absolute;
+				bottom: -15px;
+				left: 0;
+				width: 272px;
+				height: 3px;
+				background-color: #fff;
+			}
+		}
+		&__body{
+			grid-template-columns: 1fr;
+			justify-content: center;
+		}
+		&__item{
+			padding-left: 50px;
+			max-width: 100%;
+		}
+		&__list{
+			margin: 0 0 20px;
+			li{
+				font-size: 12px;
+				line-height: 25px;
+			}
+		}
+		&__name{
+			font-size: 13px;
+			line-height: 25px;
 		}
 	}
 }
