--- a/src/scss/mpr-franchise.scss
+++ b/src/scss/mpr-franchise.scss
@@ -84,6 +84,7 @@ img{
 @import "componets/statistic";
 @import "componets/advantage";
 @import "componets/open-data";
+@import "componets/store-decoration";
 
 
 
