--- a/src/scss/componets/store-decoration.scss
+++ b/src/scss/componets/store-decoration.scss
@@ -31,4 +31,13 @@
       width: 100%;
     }
   }
+  @include r(767){
+    &__title{
+      font-size: 20px;
+      line-height: 25px;
+    }
+    &__img{
+      margin: 20px auto;
+    }
+  }
 }
