--- a/src/scss/mpr-franchise.scss
+++ b/src/scss/mpr-franchise.scss
@@ -85,6 +85,7 @@ img{
 @import "componets/advantage";
 @import "componets/open-data";
 @import "componets/store-decoration";
+@import "componets/uniform";
 
 
 
