--- a/src/scss/componets/open-data.scss
+++ b/src/scss/componets/open-data.scss
@@ -14,7 +14,17 @@
     color: #E30613;
     align-self: center;
   }
+
   @include r(767){
     padding-top: 20px;
+    flex-direction: column;
+    &__title {
+      font-size: 20px;
+      line-height: 24px;
+      margin: 20px 0;
+    }
+    img{
+      width: 100%;
+    }
   }
 }
