--- a/src/scss/componets/uniform.scss
+++ b/src/scss/componets/uniform.scss
@@ -29,6 +29,8 @@
     img{
       align-self: center;
       justify-content: center;
+      display: block;
+      margin: 0 auto;
     }
   }
   @include r(767){
