--- a/src/scss/mpr-franchise.scss
+++ b/src/scss/mpr-franchise.scss
@@ -86,6 +86,8 @@ img{
 @import "componets/open-data";
 @import "componets/store-decoration";
 @import "componets/uniform";
+@import "componets/parametrs";
+@import "componets/investment";
 
 
 
