--- a/src/scss/componets/number.scss
+++ b/src/scss/componets/number.scss
@@ -1,22 +1,55 @@
-.number{
+.number {
 	background-color: #E30613;
 	padding: 64px 0;
-	&__body{
+
+	&--secondary {
+		.number__body{
+			align-items: flex-end;
+		}
+		.number__item {
+			border-bottom: 3px solid #000;
+			max-width: 160px;
+			padding-bottom: 15px;
+		}
+
+		.number__text {
+			font-size: 18px;
+			line-height: 25px;
+			word-wrap: break-word;
+		}
+
+		.number__count {
+			border: none;
+			margin: 0;
+			text-align: left;
+			span {
+				font-weight: bold;
+				font-size: 18px;
+				line-height: 25px;
+				letter-spacing: 0.05em;
+			}
+		}
+	}
+
+	&__body {
 		display: flex;
 		align-items: center;
 		justify-content: space-evenly;
 	}
-	&__item{
+
+	&__item {
 		font-style: normal;
 		font-weight: bold;
 		letter-spacing: 0.05em;
 		color: #FFFFFF;
 	}
-	&__text{
+
+	&__text {
 		font-size: 24px;
 		line-height: 25px;
 	}
-	&__count{
+
+	&__count {
 		width: fit-content;
 		font-size: 48px;
 		margin-bottom: 6px;
@@ -26,23 +59,56 @@
 		margin-right: 0;
 		margin-left: auto;
 	}
-	&__name{
+
+	&__name {
 		font-size: 24px;
 		line-height: 25px;
 		text-align: right;
 	}
-	@include r(767){
+
+	@include r(767) {
 		padding: 14px 0;
-		&__text{
+		&--secondary {
+			.number__body{
+				justify-content: space-between;
+				align-items: stretch;
+				gap: 10px;
+			}
+			.number__item {
+				max-width: 100px;
+				padding-bottom: 10px;
+				display: flex;
+				flex-direction: column;
+				justify-content: space-between;
+			}
+
+			.number__text {
+				font-size: 12px;
+				line-height: 25px;
+				margin-bottom: 5px;
+			}
+
+			.number__count {
+				font-size: 30px;
+				line-height: 25px;
+				margin-top: 0;
+				margin-bottom: auto;
+				span {
+					font-size: 13px;
+					line-height: 25px;
+				}
+			}
+		}
+		&__text {
 			font-size: 13px;
 			line-height: 25px;
 		}
-		&__count{
+		&__count {
 			font-size: 30px;
 			line-height: 25px;
 			width: 100%;
 		}
-		&__name{
+		&__name {
 			font-size: 13px;
 			line-height: 25px;
 		}
