--- a/src/scss/mpr-franchise.scss
+++ b/src/scss/mpr-franchise.scss
@@ -88,6 +88,8 @@ img{
 @import "componets/uniform";
 @import "componets/parametrs";
 @import "componets/investment";
+@import "componets/learning-main";
+@import "componets/learning-page";
 
 
 
