--- a/src/scss/mpr-franchise.scss
+++ b/src/scss/mpr-franchise.scss
@@ -90,6 +90,7 @@ img{
 @import "componets/investment";
 @import "componets/learning-main";
 @import "componets/learning-page";
+@import "componets/reviews";
 
 
 
