--- a/src/scss/componets/learning-main.scss
+++ b/src/scss/componets/learning-main.scss
@@ -88,6 +88,22 @@
 			grid-gap: 24px;
 			justify-content: space-between;
 		}
+		&__img {
+			position: relative;
+			margin-bottom: 20px;
+			&:before{
+				content: '';
+				position: absolute;
+				bottom: 0;
+				left: 0;
+				background: linear-gradient(180deg, rgba(255, 255, 255, 0) 29.6%, #FFFFFF 94.91%);
+				width: 100%;
+				height: 50px;
+			}
+			img{
+				width: 100%;
+			}
+		}
 		&__item{
 			display: flex;
 			flex-direction: row;
