--- a/src/scss/componets/reviews.scss
+++ b/src/scss/componets/reviews.scss
@@ -21,7 +21,7 @@
 		}
 	}
 	&__body{
-		overflow: hidden;
+		position: relative;
 	}
 	&__name{
 		background-color: #EFEDED;
@@ -71,5 +71,85 @@
 		width: fit-content;
 		margin: 40px auto 0;
 		display: block;
+	}
+	.swiper-container-reviews{
+		overflow: hidden;
+		position: relative;
+	}
+	.swiper-reviews-next{
+		cursor: pointer;
+		position: absolute;
+		right: -100px;
+		top: 0;
+		z-index: 10;
+		background-color: #fff;
+		width: 100px;
+		height: calc(100% - 100px);
+		background-image: url("../img/icons-sprite.svg#icon-arrow-right-slider");
+		background-repeat: no-repeat;
+		background-position: center;
+	}
+	@include r(1366){
+		&__anons{
+			padding-right: 50px;
+		}
+		.swiper-reviews-next{
+			right: -1px;
+			width: 50px;
+			top: 45px;
+		}
+	}
+	@include r(767){
+		padding: 20px 0;
+		&__header {
+			margin-bottom: 37px;
+		}
+		&__title{
+			font-size: 20px;
+			line-height: 25px;
+		}
+		&__name{
+			padding: 8px 50px;
+			font-size: 13px;
+			line-height: 25px;
+			margin-bottom: 15px;
+		}
+		&__anons{
+			font-size: 12px;
+			line-height: 25px;
+			ul{
+				margin: 15px 0;
+				padding: 0;
+				list-style-type: none;
+				font-weight: normal;
+				color: #000000;
+
+				li {
+					position: relative;
+					padding-left: 15px;
+
+					&:before {
+						content: '';
+						position: absolute;
+						top: 9px;
+						left: 0;
+						border-radius: 50%;
+						background-color: #000;
+						width: 5px;
+						height: 5px;
+						margin-right: 10px;
+						vertical-align: middle;
+						overflow: hidden;
+					}
+				}
+			}
+		}
+		.btn{
+			width: fit-content;
+			margin: 0 auto;
+			font-size: 12px;
+			line-height: 14px;
+			padding: 11px 20px;
+		}
 	}
 }
