--- a/src/scss/componets/learning-page.scss
+++ b/src/scss/componets/learning-page.scss
@@ -1,3 +1,165 @@
 .learning-page{
+	overflow: hidden;
+	&__title{
+		font-weight: bold;
+		font-size: 24px;
+		line-height: 25px;
+		letter-spacing: 0.05em;
+		position: relative;
+		width: fit-content;
+		margin-bottom: 30px;
+		&:after {
+			content: '';
+			position: absolute;
+			bottom: -15px;
+			left: 0;
+			width: 142px;
+			height: 3px;
+			background-color: #E30613;
+		}
+	}
+	h2{
+		font-weight: bold;
+		font-size: 24px;
+		line-height: 25px;
+		letter-spacing: 0.05em;
+		color: #000000
+	}
+	&__body{
+		max-width: 970px;
+		margin-left: auto;
+		margin-right: 0;
+	}
+	&__galllery{
+		display: flex;
+		gap: 20px;
+		img{
+			border-radius: 10px;
+		}
+	}
+	&__dark{
+		 margin: 0;
+		 background-color: #E5E5E5;
+		 border-radius: 10px;
+		 padding: 10px 20px;
+		 line-height: 25px;
+		 p{
+			 font-weight: bold;
+			 margin: 0;
+			 font-size: 14px;
+		 }
+		 ul{
+			 margin: 0;
+		 }
+	 }
+	&__list{
+		margin: 27px 0;
+		padding: 0;
+		list-style-type: none;
+		font-weight: normal;
+		font-size: 14px;
+		line-height: 35px;
+		letter-spacing: 0.05em;
+		text-transform: lowercase;
+		color: #000000;
 
+		li {
+			position: relative;
+			padding-left: 15px;
+			&:before {
+				content: '';
+				position: absolute;
+				top: 16px;
+				left: 0;
+				border-radius: 50%;
+				background-color: #000;
+				width: 5px;
+				height: 5px;
+				margin-right: 10px;
+				vertical-align: middle;
+				overflow: hidden;
+			}
+		};
+	}
+	&__row{
+		display: flex;
+		justify-content: space-between;
+		gap: 20px;
+	}
+	@include r(767){
+		&__title{
+			font-size: 20px;
+			line-height: 25px;
+			margin-bottom: 30px;
+			&:after {
+				content: '';
+				position: absolute;
+				bottom: -15px;
+				left: 0;
+				width: 142px;
+				height: 3px;
+				background-color: #E30613;
+			}
+		}
+		&__galllery{
+			flex-wrap: wrap;
+			&>div{
+				width: 100%;
+			}
+			img{
+				width: 100%;
+			}
+		}
+		h2{
+			font-size: 20px;
+			margin-bottom: 11px;
+		}
+		p{
+			font-size: 12px;
+		}
+		&__dark{
+			margin: 0 -15px;
+
+		}
+		&__list{
+			margin: 27px 0;
+			padding: 0;
+			list-style-type: none;
+			font-weight: normal;
+			font-size: 14px;
+			line-height: 35px;
+			letter-spacing: 0.05em;
+			text-transform: lowercase;
+			color: #000000;
+
+			li {
+				position: relative;
+				padding-left: 15px;
+				&:before {
+					content: '';
+					position: absolute;
+					top: 9px;
+					left: 0;
+					border-radius: 50%;
+					background-color: #000;
+					width: 5px;
+					height: 5px;
+					margin-right: 10px;
+					vertical-align: middle;
+					overflow: hidden;
+				}
+			};
+		}
+		&__row{
+			flex-wrap: wrap;
+			&>div{
+				width: 100%;
+			}
+		}
+		.btn{
+			display: block;
+			width: fit-content;
+			margin: 0 auto;
+		}
+	}
 }
