--- a/src/scss/form.scss
+++ b/src/scss/form.scss
@@ -8,7 +8,7 @@
     padding: 32px;
 }
 .form-group {
-    margin-bottom: 16px;
+    margin-bottom: 24px;
     &.mb-60 {
         margin-bottom: 60px;
     }
@@ -58,17 +58,19 @@
 .form-control {
     display: block;
     width: 100%;
-    padding:.889rem .75rem;
-    font-size: 15px;
+    padding:.6rem .75rem;
+    font-size: 12px;
     line-height: 20px;
-    color: #a4a9bb;
+    color: #000000;
     background-color: #fff;
     background-clip: padding-box;
     border: 2px solid #e6e6e6;
-    border-radius: 0;
+    border-radius: 4px;
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
     font-style: normal;
     font-weight: normal;
+    letter-spacing: 0.05em;
+    text-transform: capitalize;
 }
 
 .form-group-simbol {
