--- a/src/scss/mpr-franchise.scss
+++ b/src/scss/mpr-franchise.scss
@@ -93,6 +93,7 @@ img{
 @import "componets/learning-main";
 @import "componets/learning-page";
 @import "componets/reviews";
+@import "componets/articles";
 
 
 
