--- a/src/scss/componets/articles.scss
+++ b/src/scss/componets/articles.scss
@@ -1,6 +1,4 @@
 .articles{
-
-
 	&__title{
 		font-weight: bold;
 		font-size: 24px;
@@ -76,5 +74,68 @@
 		line-height: 16px;
 		letter-spacing: 0.05em;
 		padding: 8.5px 30px;
+	}
+
+	@include r(767){
+		&__item{
+			&.active{
+				.articles__data{
+					display: block;
+				}
+				.articles__dropdown{
+					display: block;
+				}
+			}
+		}
+		&__header{
+			flex-wrap: wrap;
+		}
+		&__name{
+			flex: 0 0 100%;
+			position: relative;
+			padding-right: 25px;
+			&:after{
+				content: '';
+				position: absolute;
+				top: 50%;
+				right: 0;
+				transform: translate(0,-50%);
+				background-image: url("../img/icons-sprite.svg#icon-arrow-dropdown");
+				background-repeat: no-repeat;
+				width: 22px;
+				height: 10px;
+			}
+		}
+		&__data{
+			font-size: 12px;
+			text-align: right;
+			flex: 0 0 100%;
+			display: none;
+		}
+		&__row{
+			flex-wrap: wrap;
+		}
+		&__img{
+			order: 2;
+			flex: 0 0 100%;
+			img{
+				width: 100%;
+			}
+		}
+		&__txt{
+			order: 1;
+			flex: 0 0 100%;
+			.btn{
+				display: block!important;
+				margin-left: 0;
+				margin-right: auto;
+			}
+		}
+		&__dropdown{
+			display: none;
+		}
+		.btn{
+			display: none;
+		}
 	}
 }
