--- a/src/scss/mpr-franchise.scss
+++ b/src/scss/mpr-franchise.scss
@@ -94,6 +94,7 @@ img{
 @import "componets/learning-page";
 @import "componets/reviews";
 @import "componets/articles";
+@import "componets/pagination";
 
 
 
