--- a/src/scss/componets/articles.scss
+++ b/src/scss/componets/articles.scss
@@ -1,4 +1,5 @@
 .articles{
+	margin: 15px 0;
 	&__title{
 		font-weight: bold;
 		font-size: 24px;
@@ -77,6 +78,10 @@
 	}
 
 	@include r(767){
+		&__title{
+			font-size: 20px;
+			line-height: 25px;
+		}
 		&__item{
 			&.active{
 				.articles__data{
