--- a/src/template/_modal.html
+++ b/src/template/_modal.html
@@ -22,3 +22,79 @@
         </div>
     </form>
 </div>
+
+<!--Запись на курс-->
+<div class="remodal" data-remodal-id="course">
+    <button data-remodal-action="close" class="remodal-close"></button>
+    <div class="title">Запись на курс</div>
+    <form action="">
+        <div class="form-group">
+            <input type="text" class="form-control" name="NAME" placeholder="Ваше имя">
+        </div>
+        <div class="form-group">
+            <input type="text" class="form-control" name="PHONE" placeholder="Телефон">
+        </div>
+        <div class="form-group">
+            <input type="text" class="form-control" name="CITY" placeholder="Ваш Город">
+        </div>
+        <div class="form-group">
+            <input type="text" class="form-control" name="EMAIL" placeholder="E-mail">
+        </div>
+        <div class="form-group">
+            <button data-remodal-action="confirm" class="btn btn-primary w100">Записаться</button>
+        </div>
+    </form>
+</div>
+
+<!--Задать вопрос-->
+<div class="remodal" data-remodal-id="question">
+    <button data-remodal-action="close" class="remodal-close"></button>
+    <div class="title">Задать вопрос</div>
+    <form action="">
+        <div class="form-group">
+            <input type="text" class="form-control" name="NAME" placeholder="Ваше имя">
+        </div>
+        <div class="form-group">
+            <input type="text" class="form-control" name="PHONE" placeholder="Телефон">
+        </div>
+        <div class="form-group">
+            <input type="text" class="form-control" name="CITY" placeholder="Ваш Город">
+        </div>
+        <div class="form-group">
+            <input type="text" class="form-control" name="EMAIL" placeholder="E-mail">
+        </div>
+        <div class="form-group">
+            <textarea name="MESSAGE" id="" cols="30" rows="10" placeholder="Задать вопрос"></textarea>
+        </div>
+        <div class="form-group">
+            <button data-remodal-action="confirm" class="btn btn-primary w100">Отправить</button>
+        </div>
+    </form>
+</div>
+
+<!--Оставьте заявку на связь с региональным тренером-->
+<div class="remodal" data-remodal-id="trener">
+    <button data-remodal-action="close" class="remodal-close"></button>
+    <div class="title">Оставьте заявку на связь
+        с региональным тренером</div>
+    <form action="">
+        <div class="form-group">
+            <input type="text" class="form-control" name="NAME" placeholder="Ваше имя">
+        </div>
+        <div class="form-group">
+            <input type="text" class="form-control" name="PHONE" placeholder="Телефон">
+        </div>
+        <div class="form-group">
+            <input type="text" class="form-control" name="CITY" placeholder="Ваш Город">
+        </div>
+        <div class="form-group">
+            <input type="text" class="form-control" name="EMAIL" placeholder="E-mail">
+        </div>
+        <div class="form-group">
+            <textarea name="MESSAGE" id="" cols="30" rows="10" placeholder="Задать вопрос"></textarea>
+        </div>
+        <div class="form-group">
+            <button data-remodal-action="confirm" class="btn btn-primary w100">Связаться с тренером</button>
+        </div>
+    </form>
+</div>
