--- a/src/template/_modal.html
+++ b/src/template/_modal.html
@@ -64,7 +64,7 @@
             <input type="text" class="form-control" name="EMAIL" placeholder="E-mail">
         </div>
         <div class="form-group">
-            <textarea name="MESSAGE" id="" cols="30" rows="10" placeholder="Задать вопрос"></textarea>
+            <textarea class="form-control" name="MESSAGE" id="" cols="30" rows="5" placeholder="Задать вопрос"></textarea>
         </div>
         <div class="form-group">
             <button data-remodal-action="confirm" class="btn btn-primary w100">Отправить</button>
