--- a/src/scss/remodal.scss
+++ b/src/scss/remodal.scss
@@ -3,15 +3,17 @@
     background: #EFEDED;
     border-radius: 10px;
     position: relative;
-    padding: 24px;
+    padding: 16px 24px 0;
     .remodal-close {
-        right: 22px;
-        top: 24px;
+        right: 10px;
+        top: 10px;
         left: auto;
         width: 18px;
         height: 18px;
         &:before {
-
+            width: 100%;
+            height: 100%;
+            line-height: 18px;
         }
     }
     .title{
@@ -23,8 +25,71 @@
         color: #E30613;
         margin-bottom: 20px;
     }
+    .btn{
+        width: fit-content;
+        display: block;
+        margin: 0 auto;
+    }
+    .jq-selectbox{
+        width: 100%;
+        &__select{
+            background: #fff;
+            text-shadow: none;
+            box-shadow: none;
+            height: 43px;
+            line-height: 43px;
+            border: none;
+            font-size: 18px;
+            border-radius: 10px;
+            color: #000;
+        }
+        &__trigger{
+            border-left: none;
+            &-arrow{
+                border-top-color: #E30613;
+                top: 19px;
+            }
+        }
+    }
     @include rmin(641){
-        max-width: 320px;
+        max-width: 524px;
+        padding: 32px 54px 10px;
+        .title{
+            font-weight: bold;
+            font-size: 18px;
+            line-height: 24px;
+            text-align: center;
+            letter-spacing: 0.05em;
+            color: #E30613;
+            margin-bottom: 20px;
+        }
+    }
+    @include r(767){
+        .jq-selectbox{
+            width: 100%;
+            &__select{
+                background: #fff;
+                text-shadow: none;
+                box-shadow: none;
+                height: 24px;
+                font-size: 12px;
+                line-height: 24px;
+                border: none;
+                border-radius: 4px;
+            }
+            &__trigger{
+                border-left: none;
+                &-arrow{
+                    border-top-color: #E30613;
+                    top: 10px;
+                }
+            }
+        }
+        .btn{
+            padding: 7px 35px;
+            font-size: 18px;
+            line-height: 22px;
+        }
     }
 }
 .remodal-wrapper {
