--- a/src/template/_modal.html
+++ b/src/template/_modal.html
@@ -29,6 +29,14 @@
     <div class="title">Запись на курс</div>
     <form action="">
         <div class="form-group">
+            <select name="SELECT_COURSE" id="">
+                <option value="">Выбрать курс</option>
+                <option value="">выбрать курс</option>
+                <option value="">выбрать курс</option>
+                <option value="">выбрать курс</option>
+            </select>
+        </div>
+        <div class="form-group">
             <input type="text" class="form-control" name="NAME" placeholder="Ваше имя">
         </div>
         <div class="form-group">
@@ -90,8 +98,12 @@
         <div class="form-group">
             <input type="text" class="form-control" name="EMAIL" placeholder="E-mail">
         </div>
+        <div class="form-group form-row">
+            <input type="text" class="form-control" name="OT" placeholder="с">
+            <input type="text" class="form-control" name="DO" placeholder="По">
+        </div>
         <div class="form-group">
-            <textarea name="MESSAGE" id="" cols="30" rows="10" placeholder="Задать вопрос"></textarea>
+            <input type="text" class="form-control" name="MAGAZIN" placeholder="Магазин">
         </div>
         <div class="form-group">
             <button data-remodal-action="confirm" class="btn btn-primary w100">Связаться с тренером</button>
