--- a/src/template/_header.html
+++ b/src/template/_header.html
@@ -11,7 +11,7 @@
     </div>
 </header>
 
-<!--TODO: меню для мобилы-->
+<!--TODO: закрыть меню при переходе-->
 <nav class="nav">
     <div class="container">
         <ul class="nav__menu">
@@ -24,7 +24,7 @@
                 </ul>
             </li>
             <li class="nav__item">
-                <a class="nav__link nav__link--arrow" href="#">Готовое решение</a>
+                <a class="nav__link nav__link--arrow" href="#advantage">Готовое решение</a>
                 <ul class="nav__dropdown dropdown">
                     <li class="dropdown__item"><a class="dropdown__link" href="#advantage">преимущества МПР</a></li>
                     <li class="dropdown__item"><a class="dropdown__link" href="#opening">этапы открытия</a></li>
