--- a/src/scss/componets/learning-main.scss
+++ b/src/scss/componets/learning-main.scss
@@ -43,11 +43,11 @@
 		grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
 		grid-gap: 40px;
 		justify-content: space-between;
+		align-items: flex-start;
 	}
 	&__item{
 		display: flex;
 		flex-direction: column;
-		justify-content: center;
 	}
 	&__icon {
 		background-image: url("../img/icons-sprite.svg#icon-training-red");
@@ -69,7 +69,7 @@
 		color: #000000;
 	}
 	.btn{
-		align-self: center;
+		margin: auto;
 		width: 100%;
 	}
 
