--- a/src/template/_modal.html
+++ b/src/template/_modal.html
@@ -18,7 +18,7 @@
             <input type="text" class="form-control" name="EMAIL" placeholder="E-mail">
         </div>
         <div class="form-group">
-            <button data-remodal-action="confirm" class="btn btn-primary w100">оставить заявку</button>
+            <button data-remodal-action="confirm" class="btn btn-primary w100">Оставить заявку</button>
         </div>
     </form>
 </div>
