--- a/src/scss/componets/advantage.scss
+++ b/src/scss/componets/advantage.scss
@@ -6,18 +6,7 @@
 		background-color: #fff;
 		color: #000;
 		.advantage__title{
-			font-weight: bold;
-			font-size: 24px;
-			line-height: 25px;
-			letter-spacing: 0.05em;
-			position: relative;
 			&:after{
-				content: '';
-				position: absolute;
-				bottom: -15px;
-				left: 0;
-				width: 272px;
-				height: 3px;
 				background-color: #E30613;
 			}
 		}
@@ -38,6 +27,14 @@
 			}
 		}
 	}
+	&.active{
+		.advantage__arrow{
+			transform: rotate(0);
+		}
+		.dropdown-block{
+			display: block;
+		}
+	}
 	&__header{
 		margin-bottom: 72px;
 	}
@@ -52,7 +49,7 @@
 			position: absolute;
 			bottom: -15px;
 			left: 0;
-			width: 272px;
+			width: 142px;
 			height: 3px;
 			background-color: #fff;
 		}
@@ -126,19 +123,11 @@
 		&.stages{
 			background-color: #fff;
 			color: #000;
+			.advantage__arrow{
+				background-image: url("../img/icons-sprite.svg#icon-arrow-dropdown");
+			}
 			.advantage__title{
-				font-weight: bold;
-				font-size: 24px;
-				line-height: 25px;
-				letter-spacing: 0.05em;
-				position: relative;
 				&:after{
-					content: '';
-					position: absolute;
-					bottom: -15px;
-					left: 0;
-					width: 272px;
-					height: 3px;
 					background-color: #E30613;
 				}
 			}
@@ -160,8 +149,23 @@
 				}
 			}
 		}
+		.dropdown-block{
+			display: none;
+		}
 		&__header{
 			margin-bottom: 37px;
+			position: relative;
+
+		}
+		&__arrow{
+			position: absolute;
+			bottom: -18px;
+			right: 0;
+			background-image: url("../img/icons-sprite.svg#icon-arrow-dropdown-white");
+			background-repeat: no-repeat;
+			transform: rotate(-90deg);
+			width: 26px;
+			height: 13px;
 		}
 		&__title{
 			font-size: 20px;
@@ -171,7 +175,7 @@
 				position: absolute;
 				bottom: -15px;
 				left: 0;
-				width: 272px;
+				width: 142px;
 				height: 3px;
 				background-color: #fff;
 			}
