--- a/src/scss/componets/uniform.scss
+++ b/src/scss/componets/uniform.scss
@@ -1,50 +1,88 @@
-.uniform{
-  margin: 30px 0;
-  &__header{
-    margin-bottom: 80px;
-  }
-  &__title{
-    font-weight: bold;
-    font-size: 24px;
-    line-height: 25px;
-    letter-spacing: 0.05em;
-    position: relative;
-    width: fit-content;
-    &:after{
-      content: '';
-      position: absolute;
-      bottom: -15px;
-      left: 0;
-      width: 100%;
-      height: 3px;
-      background-color: #E30613;
-    }
-  }
-  &__body{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 20px;
-    justify-content: center;
-    align-items: center;
-    img{
-      align-self: center;
-      justify-content: center;
-      display: block;
-      margin: 0 auto;
-    }
-  }
-  @include r(767){
-    &__title {
-      font-weight: bold;
-      font-size: 20px;
-      line-height: 25px;
-    }
-    &__body{
-      display: grid;
-      grid-template-columns: 1fr;
-      grid-gap: 20px;
-      justify-content: center;
-      align-items: center;
-    }
-  }
+.uniform {
+	margin: 30px 0;
+
+	&.active {
+		.dropdown-block {
+			display: block;
+		}
+
+		.uniform__arrow {
+			transform: rotate(0);
+		}
+	}
+
+	&__arrow {
+		display: none;
+	}
+
+	&__header {
+		margin-bottom: 80px;
+		position: relative;
+	}
+
+	&__title {
+		font-weight: bold;
+		font-size: 24px;
+		line-height: 25px;
+		letter-spacing: 0.05em;
+		position: relative;
+		width: fit-content;
+
+		&:after {
+			content: '';
+			position: absolute;
+			bottom: -15px;
+			left: 0;
+			width: 100%;
+			height: 3px;
+			background-color: #E30613;
+		}
+	}
+
+	&__body {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		grid-gap: 20px;
+		justify-content: center;
+		align-items: center;
+
+		img {
+			align-self: center;
+			justify-content: center;
+			display: block;
+			margin: 0 auto;
+		}
+	}
+
+	@include r(767) {
+		&__arrow {
+			position: absolute;
+			bottom: -18px;
+			right: 0;
+			background-repeat: no-repeat;
+			transform: rotate(-90deg);
+			width: 26px;
+			height: 13px;
+			display: block;
+			background-image: url("../img/icons-sprite.svg#icon-arrow-dropdown");
+		}
+		.dropdown-block {
+			display: none;
+		}
+		&__header{
+			margin-bottom: 37px;
+		}
+		&__title {
+			font-weight: bold;
+			font-size: 20px;
+			line-height: 25px;
+		}
+		&__body {
+			display: grid;
+			grid-template-columns: 1fr;
+			grid-gap: 20px;
+			justify-content: center;
+			align-items: center;
+		}
+	}
 }
