--- a/src/scss/componets/advantage.scss
+++ b/src/scss/componets/advantage.scss
@@ -63,6 +63,7 @@
 	&__item{
 		padding-left: 50px;
 		position: relative;
+		margin-bottom: 57px;
 		span{
 			color: #fff;
 		}
@@ -187,6 +188,7 @@
 		&__item{
 			padding-left: 50px;
 			max-width: 100%;
+			margin-bottom: 40px;
 		}
 		&__list{
 			margin: 0 0 20px;
