--- a/src/scss/componets/learning-main.scss
+++ b/src/scss/componets/learning-main.scss
@@ -58,8 +58,10 @@
 		align-items: flex-start;
 	}
 	&__item{
+		max-width: 262px;
 		display: flex;
 		flex-direction: column;
+		height: 100%;
 	}
 	&__icon {
 		background-image: url("../img/icons-sprite.svg#icon-training-red");
@@ -81,7 +83,7 @@
 		color: #000000;
 	}
 	.btn{
-		margin: auto;
+		margin: auto 0 20px;
 		width: 100%;
 	}
 
@@ -134,6 +136,7 @@
 			}
 		}
 		&__item{
+			max-width: 100%;
 			display: flex;
 			flex-direction: row;
 			justify-content: flex-start;
