--- a/src/scss/componets/statistic.scss
+++ b/src/scss/componets/statistic.scss
@@ -1,8 +1,19 @@
 .statistic{
 	margin-bottom: 88px;
 	overflow: hidden;
+	&__body{
+		margin-bottom: 70px;
+		position: relative;
+		display: flex;
+		justify-content: space-between;
+	}
 	&__item{
-
+		position: relative;
+		.next{
+			max-width: 124px;
+			width: 100%;
+			height: 100%;
+		}
 	}
 	&__count{
 		font-weight: bold;
@@ -29,31 +40,19 @@
 		text-align: center;
 		color: #E30613;
 	}
-	.swiper-container-statistic{
-		margin-bottom: 70px;
-		position: relative;
-	}
-	.swiper-slide{
-		width: auto!important;
-	}
-	.swiper-statistic-next{
-		position: absolute;
-		right: 0;
-		top: 0;
-		z-index: 10;
-		background-color: #fff;
-		width: 100px;
-		height: 100%;
-		background-image: url("../img/icons-sprite.svg#icon-arrow-next");
-		background-repeat: no-repeat;
-		background-position: center;
-	}
 	@include r(767){
 		margin-bottom: 24px;
+		&__body{
+			margin-bottom: 24px;
+			flex-direction: column;
+		}
 		&__item{
 			display: flex;
 			margin-bottom: 18px;
 			align-items: baseline;
+			.next{
+				display: none;
+			}
 		}
 		&__count{
 			order: 2;
@@ -76,15 +75,6 @@
 			border-bottom: 3px solid #E30613;
 			margin-right: 57px;
 
-		}
-		.swiper-container-statistic{
-			margin-bottom: 24px;
-		}
-		.swiper-wrapper{
-			flex-direction: column;
-		}
-		.swiper-statistic-next{
-			display: none;
 		}
 	}
 }
