--- a/src/template/_footer.html
+++ b/src/template/_footer.html
@@ -16,3 +16,8 @@
         </div>
     </div>
 </footer>
+
+<div id="button-up" class="button-up">
+    <div class="button-up__arrow"></div>
+    наверх
+</div>
