--- a/src/scss/buttons.scss
+++ b/src/scss/buttons.scss
@@ -1,6 +1,6 @@
 .btn{
 	display: inline-block;
-	font-weight: 400;
+	font-weight: bold;
 	text-align: center;
 	white-space: nowrap;
 	vertical-align: middle;
@@ -13,6 +13,7 @@
 	cursor: pointer;
 	transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 	text-decoration: none;
+	letter-spacing: 0.05em;
 	&:focus,
 	&:hover {
 		text-decoration: none;
