--- a/src/scss/componets/store-decoration.scss
+++ b/src/scss/componets/store-decoration.scss
@@ -1,11 +1,17 @@
 .store-decoration {
-  &__title{
+  &__header {
+    position: relative;
+    margin-bottom: 100px;
+  }
+
+  &__title {
     font-weight: bold;
     font-size: 24px;
     line-height: 25px;
     letter-spacing: 0.05em;
     position: relative;
-    &:after{
+
+    &:after {
       content: '';
       position: absolute;
       bottom: -15px;
@@ -15,10 +21,12 @@
       background-color: #E30613;
     }
   }
-  &__img{
-    margin: 80px auto;
+
+  &__img {
+    margin: 0 auto;
     position: relative;
-    &:after{
+
+    &:after {
       content: '';
       position: absolute;
       left: 0;
@@ -27,20 +35,26 @@
       width: 100%;
       height: 224px;
     }
-    img{
+
+    img {
       width: 100%;
     }
   }
-  @include r(767){
-    &__title{
+
+  @include r(767) {
+    &__header {
+      margin-bottom: 20px;
+    }
+    &__title {
       font-size: 20px;
       line-height: 25px;
-      &:after{
+
+      &:after {
         width: 142px;
       }
     }
-    &__img{
-      margin: 20px auto;
+    &__img {
+      margin: auto 20px;
     }
   }
 }
