--- a/src/scss/mpr-franchise.scss
+++ b/src/scss/mpr-franchise.scss
@@ -137,6 +137,8 @@ img{
 @import "componets/reviews";
 @import "componets/articles";
 @import "componets/pagination";
+@import "componets/articles-inner";
+@import "componets/pagination-inner";
 
 
 
