--- a/src/scss/componets/reviews.scss
+++ b/src/scss/componets/reviews.scss
@@ -1,7 +1,7 @@
 .reviews{
 	padding: 80px 0;
 	&__header {
-		margin-bottom: 80px;
+		margin-bottom: 100px;
 	}
 	&__title{
 		font-weight: bold;
@@ -15,7 +15,7 @@
 			position: absolute;
 			bottom: -15px;
 			left: 0;
-			width: 100%;
+			width: 154px;
 			height: 3px;
 			background-color: #E30613;
 		}
@@ -40,6 +40,7 @@
 		line-height: 25px;
 		letter-spacing: 0.05em;
 		color: #000000;
+		padding: 0 4px;
 		ul{
 			margin: 15px 0;
 			padding: 0;
@@ -66,6 +67,14 @@
 				}
 			}
 		}
+		p{
+			margin: 0;
+			font-weight: normal;
+			font-size: 18px;
+			line-height: 25px;
+			letter-spacing: 0.05em;
+			color: #000000;
+		}
 	}
 	.btn{
 		width: fit-content;
@@ -80,14 +89,16 @@
 		cursor: pointer;
 		position: absolute;
 		right: -100px;
-		top: 0;
+		top: 50%;
+		transform: translate(0,-50%);
 		z-index: 10;
 		background-color: #fff;
 		width: 100px;
-		height: calc(100% - 100px);
+		height: 100px;
 		background-image: url("../img/icons-sprite.svg#icon-arrow-right-slider");
 		background-repeat: no-repeat;
 		background-position: center;
+		background-size: 139px 52px;
 	}
 	@include r(1366){
 		&__anons{
@@ -96,7 +107,6 @@
 		.swiper-reviews-next{
 			right: -1px;
 			width: 50px;
-			top: 45px;
 		}
 	}
 	@include r(767){
@@ -143,13 +153,20 @@
 					}
 				}
 			}
+			p{
+				font-size: 12px;
+				line-height: 25px;
+			}
 		}
 		.btn{
 			width: fit-content;
-			margin: 0 auto;
+			margin: 24px auto 0;
 			font-size: 12px;
 			line-height: 14px;
-			padding: 11px 20px;
+			padding: 11px 13px;
+		}
+		.swiper-reviews-next{
+			background-size: 78px 26px;
 		}
 	}
 }
