--- a/src/scss/componets/hero.scss
+++ b/src/scss/componets/hero.scss
@@ -18,6 +18,12 @@
 		color: #E30613;
 		margin-bottom: 20px;
 		text-align: left;
+		span{
+			display: block;
+			margin-left: auto;
+			margin-right: 0;
+			width: fit-content;
+		}
 	}
 	&__list{
 		margin: 0 0 70px;
@@ -87,6 +93,12 @@
 		&__title{
 			font-size: 24px;
 			line-height: 30px;
+			span{
+				display: block;
+				margin-left: 0;
+				margin-right: auto;
+				width: fit-content;
+			}
 		}
 		&__list{
 			margin: 0 0 16px;
