--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -18,6 +18,12 @@
 	font-weight: 700;
 	font-style: normal;
 }
+@font-face {
+	font-family: 'CenturyGothic2';
+	src: url('../fonts/CenturyGothic/CenturyGothic-bold2.ttf') format('truetype');
+	font-weight: 700;
+	font-style: normal;
+}
 
 
 
