--- a/src/template/_header.html
+++ b/src/template/_header.html
@@ -5,13 +5,12 @@
                 <img src="./img/logo.svg" width="441" height="37" alt="Магазин постоянных распродаж">
             </a>
             <button id="menu" type="button" class="header__button"><span></span></button>
-            <a class="header__phone" href="tel:8800800800" title="Телефон">8 800 800 800</a>
-            <button type="button" class="header__btn btn btn-outline-primary" data-remodal-target="consultation">заказать звонок</button>
+            <a class="header__phone" href="tel:88002500600" title="Телефон">8 800 2500 600</a>
+            <button type="button" class="header__btn btn btn-outline-primary" data-remodal-target="consultation">Заказать звонок</button>
         </div>
     </div>
 </header>
 
-<!--TODO: закрыть меню при переходе-->
 <nav class="nav">
     <div class="container">
         <ul class="nav__menu">
