--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -12,15 +12,15 @@
 	font-style: normal;
 }
 
-@font-face {
+/*@font-face {
 	font-family: 'CenturyGothic';
 	src: url('../fonts/CenturyGothic/CenturyGothic-bold.ttf') format('truetype');
 	font-weight: 700;
 	font-style: normal;
-}
+}*/
 @font-face {
-	font-family: 'CenturyGothic2';
-	src: url('../fonts/CenturyGothic/CenturyGothic-bold2.ttf') format('truetype');
+	font-family: 'CenturyGothic';
+	src: url('../fonts/CenturyGothic/CenturyGothic-bold3.ttf') format('truetype');
 	font-weight: 700;
 	font-style: normal;
 }
