--- a/src/template/_header.html
+++ b/src/template/_header.html
@@ -1,3 +1,4 @@
+<div class="header-fix">
 <header class="header">
     <div class="container">
         <div class="header__body">
@@ -37,3 +38,4 @@
         </ul>
     </div>
 </nav>
+</div>
