--- a/src/template/_header.html
+++ b/src/template/_header.html
@@ -1,4 +1,3 @@
-<div class="header-fix">
 <header class="header">
     <div class="container">
         <div class="header__body">
@@ -7,18 +6,20 @@
             </a>
             <button id="menu" type="button" class="header__button"><span></span></button>
             <a class="header__phone" href="tel:88002500600" title="Телефон">8 800 2500 600</a>
-            <button type="button" class="header__btn btn btn-outline-primary" data-remodal-target="consultation">Заказать звонок</button>
+            <button type="button" class="header__btn btn btn-outline-primary" data-remodal-target="consultation">
+                Заказать звонок
+            </button>
         </div>
     </div>
 </header>
-
 <nav class="nav">
     <div class="container">
         <ul class="nav__menu">
             <li class="nav__item">
                 <a class="nav__link nav__link--arrow" href="#about">О нас</a>
                 <ul class="nav__dropdown dropdown">
-                    <li class="dropdown__item"><a class="dropdown__link" href="#information">общая информация</a></li>
+                    <li class="dropdown__item"><a class="dropdown__link" href="#information">общая информация</a>
+                    </li>
                     <li class="dropdown__item"><a class="dropdown__link" href="#geografia">георграфия</a></li>
                     <li class="dropdown__item"><a class="dropdown__link" href="#statistic">статистика</a></li>
                 </ul>
@@ -28,7 +29,8 @@
                 <ul class="nav__dropdown dropdown">
                     <li class="dropdown__item"><a class="dropdown__link" href="#advantage">преимущества МПР</a></li>
                     <li class="dropdown__item"><a class="dropdown__link" href="#opening">этапы открытия</a></li>
-                    <li class="dropdown__item"><a class="dropdown__link" href="#store-decoration">оформление магазина</a></li>
+                    <li class="dropdown__item"><a class="dropdown__link" href="#store-decoration">оформление
+                        магазина</a></li>
                     <li class="dropdown__item"><a class="dropdown__link" href="#uniform">униформа</a></li>
                 </ul>
             </li>
@@ -38,4 +40,3 @@
         </ul>
     </div>
 </nav>
-</div>
