--- a/src/scss/mpr-franchise.scss
+++ b/src/scss/mpr-franchise.scss
@@ -1,6 +1,9 @@
+@import "partials/formstyler";
+@import "partials/formstyler.theme";
 @import "mixin";
 @import "fonts";
 @import "buttons";
+@import "remodal";
 @import "form";
 @import "text";
 
