--- a/src/scss/componets/advantage.scss
+++ b/src/scss/componets/advantage.scss
@@ -39,6 +39,7 @@
 		margin-bottom: 100px;
 	}
 	&__title{
+		display: inline-block;
 		font-family: $font1;
 		font-weight: bold;
 		font-size: 24px;
@@ -50,7 +51,7 @@
 			position: absolute;
 			bottom: -12px;
 			left: 0;
-			width: 142px;
+			width: 100%;
 			height: 3px;
 			background-color: #fff;
 		}
