--- a/src/scss/componets/articles-inner.scss
+++ b/src/scss/componets/articles-inner.scss
@@ -6,6 +6,7 @@
 		justify-content: space-between;
 	}
 	&__title{
+		display: inline-block;
 		font-weight: bold;
 		font-size: 24px;
 		line-height: 35px;
@@ -18,7 +19,7 @@
 			position: absolute;
 			bottom: -15px;
 			left: 0;
-			width: 400px;
+			width: 100%;
 			height: 3px;
 			background-color: #E30613;
 		}
