--- a/src/scss/componets/geografia.scss
+++ b/src/scss/componets/geografia.scss
@@ -1,6 +1,7 @@
 .geografia{
 	margin-bottom: 30px;
 	&__title{
+		display: inline-block;
 		font-weight: bold;
 		font-size: 24px;
 		line-height: 25px;
@@ -14,7 +15,6 @@
 			left: 0;
 			background-color: #E30613;
 			width: 100%;
-			max-width: 142px;
 			height: 3px;
 		}
 	}
