--- a/src/scss/componets/investment.scss
+++ b/src/scss/componets/investment.scss
@@ -7,6 +7,7 @@
 	}
 
 	&__title {
+		display: inline-block;
 		font-weight: bold;
 		font-size: 24px;
 		line-height: 25px;
@@ -19,7 +20,7 @@
 			position: absolute;
 			bottom: -15px;
 			left: 0;
-			width: 264px;
+			width: 100%;
 			height: 3px;
 			background-color: #E30613;
 		}
