--- a/src/scss/componets/learning-main.scss
+++ b/src/scss/componets/learning-main.scss
@@ -17,6 +17,7 @@
 		display: none;
 	}
 	&__title{
+		display: inline-block;
 		font-weight: bold;
 		font-size: 24px;
 		line-height: 25px;
@@ -27,7 +28,7 @@
 			position: absolute;
 			bottom: -15px;
 			left: 0;
-			width: 155px;
+			width: 100%;
 			height: 3px;
 			background-color: #E30613;
 		}
