--- a/src/scss/componets/learning-page.scss
+++ b/src/scss/componets/learning-page.scss
@@ -1,6 +1,7 @@
 .learning-page{
 	overflow: hidden;
 	&__title{
+		display: inline-block;
 		font-weight: bold;
 		font-size: 24px;
 		line-height: 25px;
@@ -13,7 +14,7 @@
 			position: absolute;
 			bottom: -15px;
 			left: 0;
-			width: 142px;
+			width: 100%;
 			height: 3px;
 			background-color: #E30613;
 		}
