--- a/src/scss/componets/parametrs.scss
+++ b/src/scss/componets/parametrs.scss
@@ -17,6 +17,7 @@
 	}
 
 	&__title {
+		display: inline-block;
 		font-weight: bold;
 		font-size: 24px;
 		line-height: 25px;
@@ -29,7 +30,7 @@
 			position: absolute;
 			bottom: -15px;
 			left: 0;
-			width: 264px;
+			width: 100%;
 			height: 3px;
 			background-color: #E30613;
 		}
