--- a/src/scss/componets/reviews.scss
+++ b/src/scss/componets/reviews.scss
@@ -4,6 +4,7 @@
 		margin-bottom: 100px;
 	}
 	&__title{
+		display: inline-block;
 		font-weight: bold;
 		font-size: 24px;
 		line-height: 25px;
@@ -15,7 +16,7 @@
 			position: absolute;
 			bottom: -15px;
 			left: 0;
-			width: 154px;
+			width: 100%;
 			height: 3px;
 			background-color: #E30613;
 		}
