--- a/src/scss/componets/store-decoration.scss
+++ b/src/scss/componets/store-decoration.scss
@@ -5,6 +5,7 @@
   }
 
   &__title {
+    display: inline-block;
     font-weight: bold;
     font-size: 24px;
     line-height: 25px;
@@ -16,7 +17,7 @@
       position: absolute;
       bottom: -15px;
       left: 0;
-      width: 272px;
+      width: 100%;
       height: 3px;
       background-color: #E30613;
     }
