--- a/src/scss/componets/calculator.scss
+++ b/src/scss/componets/calculator.scss
@@ -41,13 +41,22 @@
 		}
 	}
 	&__modal-item{
-		background-color: #fff;
-		background-image: url("../img/check-bg.png");
-		background-repeat: no-repeat;
-		background-size: cover;
-		padding: 49px 55px 25px 25px;
+		padding: 49px 25px 25px;
+		margin: 0 20px;
 		max-width: 380px;
-		height: 543px;
+		position: relative;
+		&:before{
+			content: '';
+			position: absolute;
+			top: 0;
+			left: 0;
+			background-image: url("../img/check-bg.png");
+			background-repeat: no-repeat;
+			background-size: cover;
+			width: 100%;
+			height: 100%;
+			z-index: -1;
+		}
 	}
 	&__modal-logo{
 		margin-bottom: 26px;
