--- a/src/scss/mpr-franchise.scss
+++ b/src/scss/mpr-franchise.scss
@@ -128,6 +128,32 @@ img{
 		top: -20px;
 		right: -20px;
 		color: #E30613;
+		span{
+			display: none;
+		}
+	}
+	@include r(767){
+		.remodal-close{
+			top: auto;
+			right: auto;
+			color: #E30613;
+			position: relative;
+			display: block;
+			width: 100%;
+			margin: 20px 0;
+			&:before{
+				display: none;
+			}
+			span{
+				display: inline-block;
+				border-bottom: 1px solid #E30613;
+			}
+		}
+		.btn{
+			padding: 11px 20px;
+			font-size: 12px;
+			line-height: 14px;
+		}
 	}
 }
 
