--- a/src/template/_modal.html
+++ b/src/template/_modal.html
@@ -115,7 +115,7 @@
 <div class="remodal calc" data-remodal-id="calc">
     <button data-remodal-action="close" class="remodal-close"></button>
     <div class="calculator">
-    <div class="calculator__modal">
+        <div class="calculator__modal">
         <div class="calculator__modal-item">
             <div class="calculator__modal-logo"><img src="./img/logo.svg" width="441" height="37" alt="">
             </div>
@@ -233,5 +233,8 @@
             </div>
         </div>
     </div>
+        <button type="button" class="btn btn-primary">получить полный расчёт на почту</button>
+        <button data-remodal-action="close" class="remodal-close"><span>закрыть</span></button>
     </div>
+
 </div>
